# batts

./: .dockerignore  Dockerfile-backend  Dockerfile-frontend  README.md  deploy.sh
.github/workflows/: rust-static.yaml  rust-test.yaml  svelte-static.yaml
backend/: .gitignore  Cargo.toml  config.dev.yaml  config.proc.yaml  config.yaml  docker-compose.yaml  index.ts  init.sql  package.json  test.http  transform.ts  tsconfig.json  update_docker_compose.sh  vite.config.ts
backend/api_tests/: test.ts
backend/bindings/: AddGroupMember.ts  Api.ts  ApiResult.ts  ChangeAssignee.ts  ChangeGroupTitle.ts  ChangeStatus.ts  CreateGroup.ts  CreateTicket.ts  CreateUser.ts  ExternalUserProfile.ts  FetchFn.ts  GroupCommand.ts  GroupProfileView.ts  GroupView.ts  GroupViewContent.ts  IdentityView.ts  InitiateUpload.ts  InitiatedUpload.ts  RemoveGroupMember.ts  SearchResultItem.ts  SearchResults.ts  SendTicketMessage.ts  TelegramLoginData.ts  TelegramProfile.ts  TicketCommand.ts  TicketDestination.ts  TicketId.ts  TicketListingViewExpandedItem.ts  TicketStatus.ts  TicketTimelineItem.ts  TicketTimelineItemContent.ts  TicketView.ts  TicketViewContent.ts  UniversityProfile.ts  UpdateGroup.ts  UpdateTicket.ts  UpdateUser.ts  UploadId.ts  UploadMetadata.ts  UploadPolicy.ts  (+10 more)
backend/crates/batts-derive/: Cargo.toml
backend/crates/batts-derive/src/: collect_ids.rs  emitter.rs  lib.rs
backend/crates/cqrs/: Cargo.toml
backend/crates/cqrs/src/: aggregate.rs  cqrs.rs  doc.rs  event.rs  id.rs  lib.rs  mem_store.rs  query.rs  store.rs
backend/crates/cqrs/src/lifecycle/: aggregate.rs  mod.rs  view.rs
backend/crates/cqrs/src/persist/: context.rs  doc.rs  event_repository.rs  event_store.rs  event_stream.rs  generic_query.rs  replay.rs  serialized_event.rs  view_repository.rs
backend/http_test/: test.http
backend/src/: api_result.rs  auth.rs  config.rs  elasticsearch_view_repository.rs  error.rs  extractors.rs  id.rs  init_tracing.rs  login.rs  main.rs  meilisearch_view_repository.rs  memory_view_repository.rs  related_data.rs  state.rs  view_repositry_ext.rs
backend/src/domain/: group.rs  mod.rs  related_data.rs  ticket.rs  upload.rs  user.rs
backend/src/routes/: group.rs  login.rs  mod.rs  search.rs  ticket.rs  upload.rs  user.rs
backend/src/services/: mod.rs  upload.rs
deployment/: .gitignore  deployment.yaml  elasticsearch-secret.sealed.yaml  elasticsearch.yaml  ingress.yaml  meilisearch-secret.sealed.yaml  meilisearch.yaml  secrets.sealed.yaml  service.yaml
frontend/: package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: hooks.server.ts
frontend/src/lib/: index.ts
frontend/src/lib/api/: index.ts
frontend/src/lib/assets/: Settings.svelte
frontend/src/lib/components/: A.svelte  AutoComplete.svelte  Avatar.svelte  Logo.svelte  NavHamburger.svelte  NavLink.svelte  StatusBadge.svelte  TicketList.svelte  Time.svelte
frontend/src/lib/components/AutoComplete/: AutoComplete.svelte  index.ts
frontend/src/lib/mocks/: database.ts
frontend/src/lib/server/: data.js  database.js  database.ts
frontend/src/lib/utils/: api.ts  index.ts
frontend/src/mock/: index.cjs
frontend/src/mock/data/: assignedTickets.json  group.json  groups.json  me.404.json  me.json  ownedTickets.json  ticket.404.json  ticket.json  user.json
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/src/routes/assigned/: +page.svelte  +page.ts
frontend/src/routes/assignee/: +page.server.js  +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/groups/: +page.svelte  +page.ts
frontend/src/routes/me/: +page.svelte  +page.ts
frontend/src/routes/submitter/: +page.server.js  +page.svelte  +page.ts
frontend/src/routes/ticket/: +page.server.ts  +page.svelte  +page.ts  Ticket.svelte
frontend/src/routes/user/: +page.svelte  +page.ts
(+32 files in other folders)
