[package]
name = "batts-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["catch-panic"] }
http-types = "2.12.0"
futures-core = "0.3.28"
futures-util = "0.3.28"
pin-project-lite = "0.2.13"

snafu = "0.7.5"

uuid = { version = "1.4.1" }
bs58 = "0.5.0"

cqrs-es = "0.4.10"
async-trait = "0.1.52"

tracing = "0.1.37"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.13.0"
tracing-opentelemetry-instrumentation-sdk = "0.14.1"
axum-tracing-opentelemetry = "0.14.1"

[features]
expose-internal-routes = []
