[package]
name = "batts-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["catch-panic"] }
futures-core = "0.3.28"
futures-util = "0.3.28"
pin-project-lite = "0.2.13"

rust-s3 = "0.33.0"

snafu = "0.7.5"

uuid = { version = "1.4.1", features = ["v4"] }
bs58 = "0.5.0"

# not updating it since jwt-compact still uses the 1.0 version
ed25519-dalek = { version = "1.0.1", features = [] }
jwt-compact = { version = "0.7.0", features = ["ed25519-dalek", "clock", "std"], default-features = false }
# used to interface with the `cookie` crate
time = "0.3.29"
# used to interface with the `jwt-compact` crate
chrono = { version = "0.4.31", features = ["serde"] }
hex-serde = "0.1.0"

hmac = "0.12.1"
sha2 = "0.10.7"

cqrs-es = { path = "crates/cqrs" }
async-trait = "0.1.52"

tracing = "0.1.37"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.13.0"
tracing-opentelemetry-instrumentation-sdk = "0.14.1"
axum-tracing-opentelemetry = "0.14.1"
ts-rs = "7.0.0"

config = "0.13.3"
humantime-serde = "1.1.1"
secrecy = "0.8.0"
hex = "0.4.3"

[profile.ship]
inherits = "release"
debug = 0
lto = 'thin'

[workspace]
members = [
    "crates/cqrs",
]