[package]
name = "batts-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0.38"
quote = "1.0.33"
proc-macro2 = "1.0.69"
synstructure = "0.13.0"
drop_bomb = "0.1.5"
manyhow = "0.8.1"
